--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "sensio/framework-extra-bundle": "^3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
         "beberlei/DoctrineExtensions": "1.0.*",
-        "ob/highcharts-bundle": "1.*"
+        "ob/highcharts-bundle": "1.*",
+        "friendsofsymfony/jsrouting-bundle": "1.6.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
