--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -5,6 +5,7 @@ imports:
     - { resource: "@GanttBundle/Resources/config/services.yml" }
     - { resource: "@IndicateursBundle/Resources/config/services.yml" }
     - { resource: "@ProjectBundle/Resources/config/services.yml" }
+    - { resource: ivory_ck_editor.yml }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
