--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+fos_user:
+    resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+    prefix: /user
+
 project_lot:
     resource: "@ProjectBundle/Controller/LotController.php"
     type:     annotation
