--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "beberlei/DoctrineExtensions": "1.0.*",
         "ob/highcharts-bundle": "1.*",
         "friendsofsymfony/jsrouting-bundle": "1.6.3",
-        "egeloen/ckeditor-bundle": "6.0.*"
+        "egeloen/ckeditor-bundle": "6.0.*",
+        "friendsofsymfony/user-bundle":"~2.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
