--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -21,6 +21,9 @@ security:
         main:
             pattern: ^/
             form_login:
+                login_path: fos_user_security_login
+                check_path: fos_user_security_check
+                default_target_path: /projet/activity
                 provider: fos_userbundle
                 csrf_token_generator: security.csrf.token_manager
                 # if you are using Symfony < 2.8, use the following config instead:
@@ -33,6 +36,7 @@ security:
 
     access_control:
         - { path: ^/user/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/user/login_check$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/user/logout$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/user/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/user/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
